# AI-news-intelligence

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
src/: __init__.py  config.py
src/api/: __init__.py  main.py
src/api/routes/: __init__.py  articles.py  health.py  sentiment.py  topics.py
src/core/: __init__.py  config.py  database.py  logging.py
src/ingestion/: __init__.py
src/models/: __init__.py  article.py  article_db.py  base.py  processing.py  processing_job.py  source.py
src/services/: article_service.py  ingestion_service.py  sentiment_service.py
src/services/news_sources/: __init__.py  base.py  newsapi.py
src/utils/: exceptions.py  logger.py  validators.py
tests/: test_health.py
